Добавлены новые изображения

--- a/index.html
+++ b/index.html
@@ -1020,22 +1020,22 @@
             <h2 class="section-title animate-on-scroll">Галерея</h2>
             <div class="gallery-grid">
                 <div class="gallery-item animate-on-scroll">
-                    <img src="photo_2023-07-05_16-33-10.jpg" alt="Ducks Party Screenshot 1">
+                    <img src="Ducks Party Screenshot 1.jpg" alt="Ducks Party Screenshot 1">
                 </div>
                 <div class="gallery-item animate-on-scroll" style="transition-delay: 0.1s">
-                    <img src="photo_2024-01-07_17-31-19.jpg" alt="Ducks Party Screenshot 2">
+                    <img src="Ducks Party Screenshot 2.jpg" alt="Ducks Party Screenshot 2">
                 </div>
                 <div class="gallery-item animate-on-scroll" style="transition-delay: 0.2s">
-                    <img src="image_2025-05-19_22-26-04.png" alt="Ducks Party Screenshot 3">
+                    <img src="Ducks Party Screenshot 3.jpg" alt="Ducks Party Screenshot 3">
                 </div>
                 <div class="gallery-item animate-on-scroll" style="transition-delay: 0.3s">
-                    <img src="https://via.placeholder.com/500x281/FFD54F/333333?text=Ducks+Party+1" alt="Ducks Party Screenshot 4">
+                    <img src="Ducks Party Screenshot 4.jpg" alt="Ducks Party Screenshot 4">
                 </div>
                 <div class="gallery-item animate-on-scroll" style="transition-delay: 0.4s">
-                    <img src="https://via.placeholder.com/500x281/FFC107/333333?text=Ducks+Party+2" alt="Ducks Party Screenshot 5">
+                    <img src="Ducks Party Screenshot 5.jpg" alt="Ducks Party Screenshot 5">
                 </div>
                 <div class="gallery-item animate-on-scroll" style="transition-delay: 0.5s">
-                    <img src="https://via.placeholder.com/500x281/FFA000/333333?text=Ducks+Party+3" alt="Ducks Party Screenshot 6">
+                    <img src="Ducks Party Screenshot 6.jpg" alt="Ducks Party Screenshot 6">
                 </div>
             </div>
         </div>
