--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@
             <h2 class="section-title animate-on-scroll">Галерея</h2>
             <div class="gallery-grid">
                 <div class="gallery-item animate-on-scroll">
-                    <img src="Ducks-Party-Screenshot-1.jpg" alt="Ducks Party Screenshot 1">
+                    <img src="Ducks-Party-Screenshot-1.JPG" alt="Ducks Party Screenshot 1">
                 </div>
                 <div class="gallery-item animate-on-scroll" style="transition-delay: 0.1s">
                     <img src="Ducks Party Screenshot 2.jpg" alt="Ducks Party Screenshot 2">
